Web Queries Admin / No-Admin

--- a/src/server/website/PerXProp.html
+++ b/src/server/website/PerXProp.html
@@ -15,11 +15,13 @@
             <select class="controls" name="nombre" id="nombre"><option value="tipo">Identificacion</option></select>
             Numero de Lote
             <select class="controls" name="lote" id="lote"><option value="tipo">Lote</option></select>
+            Fecha de Registro
+            <input class="controls" type="date" id="date" value = "2000-09-09" step="any">
+            
             <section>
               <input class="buttons" type="submit" id="addBtn" value="Agregar" onclick="add();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
         </section>
-
     </body>
 </html>
