--- a/src/server/website/PersonaEdit.html
+++ b/src/server/website/PersonaEdit.html
@@ -24,7 +24,7 @@
             Correo Electrónico
             <input class="controls" type="email" id="email" value="" placeholder="Correo Electrónico">
             <section>
-              <input class="buttons" type="submit" id="upBtn" value="Actualizar Persona" onclick="add();">
+              <input class="buttons" type="submit" id="upBtn" value="Actualizar Persona" onclick="update();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
 
