--- a/src/server/website/PropietarioDePropiedades.html
+++ b/src/server/website/PropietarioDePropiedades.html
@@ -15,12 +15,19 @@
       <input class="buttons" type="submit" id="githubBtn" value="MunITCR" style="font-weight: bold;" onclick="window.location.href='https://github.com/valeriehernandez-7/MunITCR';">
     </div>
     <div class="col-md-auto">
-      <input class="buttons" type="submit" id="backBTN" value="Propiedades" style="font-weight: bold;" onclick="ret();">
+      <input class="buttons" type="submit" id="backBTN" value="Consultas de Administrador" style="font-weight: bold;" onclick="ret();">
     </div>
     <div class="col" style="text-align: right;">
       <input class="buttons" type="submit" id="logOutBtn" value="SALIR" style="font-weight: bold;" onclick="cerrar();">
     </div>
+    <section class="container-fluid" style="display: flex; justify-content: center;">
+      <p style="color:#FFFFFF; text-align: center;">
+        <b> Propiedades de Propietario</b><br>
+      </p>
+    </section>
   </div>
+  </div>
+  
 </header>
 <body style="background-color: #b4c5cd;">
   <br><br><br>
