--- a/src/server/website/UserXpropEdit.html
+++ b/src/server/website/UserXpropEdit.html
@@ -11,8 +11,10 @@
     <body>
         <section class= "form-usuario">
             <h5>Usuario</h5>
-            <input class="controls" type="text" id="usuario" value="" placeholder="Usuario">
-            <input class="controls" type="number" id="lote" value="" placeholder="Numero de Lote">
+            Usuario
+            <select class="controls" name="nombre" id="nombre"><option value="tipo">Usuario</option></select>
+            Numero de Lote
+            <select class="controls" name="lote" id="lote"><option value="tipo">Lote</option></select>
             <section>
               <input class="buttons" type="submit" id="upBtn" value=" Actualizar " onclick="add();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
