--- a/src/server/website/listaUsersXprop.html
+++ b/src/server/website/listaUsersXprop.html
@@ -42,14 +42,15 @@
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Usuario</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Número de Lote</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Operacion</th>
+      <!-- 
       <tr class="linea" id="1">
         <td>madrilag</td>
         <td>4325</td>
         <td>
-          <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('madrilag',123);">
+          <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('erickmadrigal','7');">
           <input class="buttons" type="submit" id="addBtn" value=" Eliminar " onclick="add();">
         </td>
-      </tr>
+      </tr>-->
       <tbody id="tableBody"></tbody>
     </table>
   </div>
