--- a/src/server/website/propPropi.html
+++ b/src/server/website/propPropi.html
@@ -22,7 +22,7 @@
     </div>
     <section class="container-fluid" style="display: flex; justify-content: center;">
       <p style="color:#FFFFFF; text-align: center;">
-        <b>Propietarios de Propiedades</b><br>
+        <b> Propiedades de Propietario</b><br>
       </p>
     </section>
   </div>
@@ -38,7 +38,7 @@
 
     <section class="filt" style="padding-left: 1em;">
       <input class="controls" type="number" id="cant" min='1' value="" placeholder="IDENTIFICACION">
-      <input class="buttons" type="submit" id="catBtn" value=" Filtrar por Identificación " onclick="cant();">
+      <input class="buttons" type="submit" id="catBtn" value=" Filtrar por Identificación " onclick="ident();">
     </section>
 
   </div>
@@ -46,6 +46,19 @@
   <br>
   <br>
   <div class="container-fluid" style="display: flex; justify-content: center;">
+    <table id="tablaItems" style="border: 2px solid #017bab;">
+      <tr>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Uso</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Zona</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Lote</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Área</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Valor fiscal</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha Registro</th>
+      </tr>
+      
+      <tbody id="tableBody"></tbody>
+    </table>
+    <!--
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
 
@@ -61,6 +74,7 @@
       </tr>
       <tbody id="tableBody"></tbody>
     </table>
+  -->
   </div>
   <br>
   <br>
