--- a/src/server/website/PropiedadesEdit.html
+++ b/src/server/website/PropiedadesEdit.html
@@ -24,7 +24,7 @@
             Fecha de Registro
             <input class="controls" type="date" id="date" value = "2000-09-09" step="any">
             <section>
-              <input class="buttons" type="submit" id="upBtn" value="Actualizar Propiedad" onclick="add();">
+              <input class="buttons" type="submit" id="upBtn" value="Actualizar Propiedad" onclick="update();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
         </section>
