--- a/src/server/website/userProp.html
+++ b/src/server/website/userProp.html
@@ -41,13 +41,11 @@
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">ID </th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Identificación</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Usuario</th>
-      </tr>
-      <tr class="linea" id=1>
-        <td>123</td>
-        <td>efmz2000</td>
-      </tr>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Contraseña</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de Usuario</th>
+      </tr>      
       <tbody id="tableBody"></tbody>
     </table>
   </div>
