--- a/src/server/website/index.html
+++ b/src/server/website/index.html
@@ -5,6 +5,7 @@
         <title>MunITCR</title>
         <link rel="stylesheet" href="css/index.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="js/index.js"></script>
     </head>
     <body>
