property page "numero de medidor"parameter updated

--- a/src/server/website/Propiedades.html
+++ b/src/server/website/Propiedades.html
@@ -17,6 +17,8 @@
             <select class="controls" name="idZone" id="idZone"><option value="tipo">Tipo de Zona</option></select>
             Número de Lote
             <input class="controls" type="number" id="lote" value="" placeholder="Número de Lote">
+            Número de Medidor
+            <input class="controls" type="number" id="medidor" value="" placeholder="Número de medidor">
             Metros cuadrados
             <input class="controls" type="number" id="squareM" value="" placeholder="Metros cuadrados">
             Valor de la propiedad
