--- a/src/server/website/listaPerXProp.html
+++ b/src/server/website/listaPerXProp.html
@@ -34,6 +34,18 @@
       <input class="buttons" type="submit" id="addBtn" value=" Vincular Persona y Propiedad " onclick="add();">
     </section>
   </div>
+  <div class="container-fluid" style="display: flex; justify-content: center;">
+    <section>
+      Selecciones el tipo de relación que desea visualizar
+      <select class="controls" name="vistarelacionpxp" id="vistarelacionpxp" style="margin-right:10px;">
+        <option value="1">Asociación</option>
+        <option value="0">Desasociación</option>
+        <input class="buttons" type="submit" id="viewBtn" value=" Actualizar " onclick="update();">
+        <br>
+        <br>
+      </select>
+    </section>
+  </div>
   <br>
   <br>
   <div class="container-fluid" style="display: flex; justify-content: center;">
