PerXprop and usser bug fixed

--- a/src/server/website/UsuarioEdit.html
+++ b/src/server/website/UsuarioEdit.html
@@ -27,7 +27,7 @@
             <!--usuario activo -->
             <section>
               <br>
-              <input type="checkbox" id="Admin" class="checkbox" />
+              <input type="checkbox" id="Admin" name="Admin" class="checkbox" />
               <label for="Admin" class="toggle">Usuario Administrador</label>
             </section>
             <!--<select class="controls" name="categorias" id="categorias"><option value="Categoria">Categoría</option></select>-->
