--- a/src/server/website/UserXpropEdit.html
+++ b/src/server/website/UserXpropEdit.html
@@ -10,13 +10,15 @@
     </head>
     <body>
         <section class= "form-usuario">
-            <h5>Usuario</h5>
-            Usuario
+            <h5>Usuario y Propiedad</h5>
+            Nombre de Usuario
             <select class="controls" name="nombre" id="nombre"><option value="tipo">Usuario</option></select>
             Numero de Lote
             <select class="controls" name="lote" id="lote"><option value="tipo">Lote</option></select>
+            Fecha de Registro
+            <input class="controls" type="date" id="date" value = "2000-09-09" step="any">
             <section>
-              <input class="buttons" type="submit" id="upBtn" value=" Actualizar " onclick="add();">
+              <input class="buttons" type="submit" id="upBtn" value="Actualizar" onclick="update();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
         </section>
