--- a/src/server/website/facturas_propiedad_NoAdmin.html
+++ b/src/server/website/facturas_propiedad_NoAdmin.html
@@ -29,22 +29,16 @@
 </header>
 <body style="background-color: #b4c5cd;">
   <br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;">
-    <section> <!---->
-      <input class="buttons" type="submit" id="addBtn" value=" Facturas Pendientes " onclick="pendientes();">
-    </section>
-  </div>
-  <br>
-  <br>
+  
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Factura</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Estado</th><!--tal vez hay que quitar-->
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Vencimiento</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Monto Original</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Monto a Pagar</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha de Vencimiento</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Morosidades</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Subtotal</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Total</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Comprobante</th>
       </tr> 
       
       <tbody id="tableBody"></tbody>
