--- a/src/server/website/consumoPropiedad_NoAdmin.html
+++ b/src/server/website/consumoPropiedad_NoAdmin.html
@@ -22,7 +22,7 @@
     </div>
     <section class="container-fluid" style="display: flex; justify-content: center;">
         <p style="color:#FFFFFF; text-align: center;">
-          <b>Facturas</b><br>
+          <b>Consumo</b><br>
         </p>
       </section>
   </div>
@@ -38,7 +38,7 @@
       <tr>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Monto</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Consumo</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Saldo</th>
       </tr> 
       
