--- a/src/server/website/AdminOptions.html
+++ b/src/server/website/AdminOptions.html
@@ -18,6 +18,7 @@
             <input class="buttons" type="submit" id="pplxprop" value="Asociones Persona/Propiedad" onclick="personXproperty();">
             <input class="buttons" type="submit" id="usrxprop" value="Asociones Usuario/Propiedad" onclick="userXproperty();">
             <input class="buttons" type="submit" id="consult" value="Consultas" onclick="consult();">
+            <input class="buttons" type="submit" id="consult" value="EventLog" onclick="eventLog();">
             <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
 
         </section>
