--- a/src/server/website/pagar_facturas_propiedad_NoAdmin.html
+++ b/src/server/website/pagar_facturas_propiedad_NoAdmin.html
@@ -34,7 +34,7 @@
       <div>
         Cantidad de Facturas
       </div>      
-      <select class="controls" name="cantFact" id="cantFact"  style="margin-right:10px"><option value="cantFact">Cantidad de Facturas</option></select>
+      <select class="controls" name="cantFact" id="cantFact"  style="margin-right:10px; width: 150px;"><option value=0>0</option></select>
     
     </section>
 
@@ -42,8 +42,8 @@
       <div>
         Metodo de Pago
       </div>
-      <select class="controls" name="metodoPago" id="metodoPago"  style="margin-right:10px"><option value="metodoPago">Metodo de Pago</option></select>
-      <input class="buttons" type="submit" id="addBtn" value=" Pagar Facturas " onclick="pendientes();">
+      <select class="controls" name="metodoPago" id="metodoPago"  style="margin-right:10px"></select>
+      <input class="buttons" type="submit" id="addBtn" value=" Pagar Facturas " onclick="pagar();">
     </section>
   </div>
   <br>
@@ -53,8 +53,8 @@
       <tr>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha de Vencimiento</th><!--tal vez hay que quitar-->
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Morosidades</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Subtotal</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Morosidades</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Total</th>
       </tr> 
       
